fixed dropdown alignment

--- a/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/index.scss
+++ b/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/index.scss
@@ -852,3 +852,9 @@ tbody {
     }
   }
 }
+
+.facility-mapping-config {
+  .multi-select-dropdown-wrap {
+    margin-bottom: 1.5rem;
+  }
+}
